--- a/CAMLNES/dune-project
+++ b/CAMLNES/dune-project
@@ -19,7 +19,7 @@
  (name CAMLNES)
  (synopsis "A short synopsis")
  (description "A longer description")
- (depends ocaml dune)
+ (depends ocaml dune ppx_inline_test)
  (tags
   (topics "to describe" your project)))
 
