--- a/CAMLNES/dune-project
+++ b/CAMLNES/dune-project
@@ -4,23 +4,24 @@
 
 (generate_opam_files true)
 
-(source
- (github username/reponame))
+;(source
+; (github username/reponame))
 
-(authors "Author Name")
+;(authors "Author Name")
 
-(maintainers "Maintainer Name")
+;(maintainers "Maintainer Name")
 
-(license LICENSE)
+;(license LICENSE)
 
-(documentation https://url/to/documentation)
+;(documentation https://url/to/documentation)
 
 (package
  (name CAMLNES)
- (synopsis "A short synopsis")
- (description "A longer description")
+ (synopsis "An NES emulator")
+ ;(description "A longer description")
  (depends ocaml dune ppx_inline_test)
- (tags
-  (topics "to describe" your project)))
+ ;(tags
+  ;(topics "to describe" your project))
+)
 
 ; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
