--- a/CAMLNES/test/rom_tests/dune
+++ b/CAMLNES/test/rom_tests/dune
@@ -1,6 +1,6 @@
 (library
  (name camlnes_rom_tests)
- (inline_tests (deps (source_tree  ../../resource/test_roms)))
+ (inline_tests (deps (source_tree  ../../resource)))
  (preprocess (pps ppx_inline_test))
  (libraries CAMLNES)
 )
