--- a/CAMLNES/CAMLNES.opam
+++ b/CAMLNES/CAMLNES.opam
@@ -6,7 +6,7 @@ depends: [
   "dune" {>= "3.6"}
   "ppx_inline_test"
   "ocamlformat"
-  "odoc" {with-doc}
+  "odoc"
 ]
 build: [
   ["dune" "subst"] {dev}
