--- a/CAMLNES/dune-project
+++ b/CAMLNES/dune-project
@@ -19,7 +19,7 @@
  (name CAMLNES)
  (synopsis "An NES emulator")
  ;(description "A longer description")
- (depends ocaml dune ppx_inline_test ocamlformat)
+ (depends ocaml dune ppx_inline_test ocamlformat odoc)
  ;(tags
   ;(topics "to describe" your project))
 )
